--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         document.getElementById("getDecodedIDToken").innerHTML = '<b>Email:</b> ' + liff.getDecodedIDToken().email;
       }).catch(err => console.error(err));
     }
-    liff.init({ liffId: "1656482590-WjXg66YV" }, () => {
+    liff.init({ liffId: "1656967793-3a4Wg1mL" }, () => {
       if (liff.isLoggedIn()) {
         //runApp()
         if (getParameterByName('type') == "text"){
